chore: 清理过程文件和备份文件，添加根目录 .gitignore
- 删除 .uploads/ 下的大文件 zip 包(88.5MB)
- 将交付报告目录加入 .gitignore 排除（保留本地文件）
- 将团队输出目录(dev-output/marketing-output/pm-output/qa-output)加入 .gitignore
- 移除 git 跟踪的 langtou-xhs-gap-analysis.html
- 创建根目录 .gitignore 规范忽略规则